objects/ChargentOrders__Chargent_Automated_Collections_Stage__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__AC_Stage__c</fullName>
        <label>AC Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Chargent_Automated_Collections__c</fullName>
        <label>Chargent Automated Collections</label>
        <referenceTo>ChargentOrders__Chargent_Automated_Collections__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections Stages</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Emailed_On__c</fullName>
        <label>Emailed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Next_Payment_Retry__c</fullName>
        <label>Next Payment Retry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Next_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Stage</label>
        <referenceTo>ChargentOrders__Chargent_Automated_Collections_Stage__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections Items</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Sender_Email_Address__c</fullName>
        <description>Organization wide email address Id for sending AC emails.</description>
        <inlineHelpText>Organization wide email address Id for sending AC emails.</inlineHelpText>
        <label>Sender Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Chargent Automated Collections Stage</label>
    <nameField>
        <displayFormat>ACL-{000000000}</displayFormat>
        <label>Chargent Automated Collections Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargent Automated Collections Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>